# CalculateRank

./: CMakeLists.txt  README.md  main.c
include/: assign.h  calc_helper.h  calculate.h  defines_ds_lib.h
src/: assign.c  defRank.c  helper_func.c
